# CTSM

./: .CLMTrunkChecklist  .CTSMTrunkChecklist  .ChangeLog_template  .config_files.xml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .pre-commit-config.yaml  .zenodo.json  CESM.cfg  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTSMMasterChecklist  ChangeLog_branch  ChangeLog_branch_template  Copyright  Externals.cfg  Externals_CLM.cfg  Externals_cime.cfg  KnownBugs  LICENSE  Quickstart.GUIDE  Quickstart.userdatasets  README  README.CHECKLIST.new_case  README.CHECKLIST.new_case.md  README.DGVM  README.DIAG.md  README.DIAGNOSTICS  README.NUOPC_driver  README.NUOPC_driver.md  README.lilac  README.md  README.rst  README_EXTERNALS  README_EXTERNALS.rst  README_GITFLEXIMOD.md  (+24 more)
lilac/: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_ctsm  docker-compose.yml  download_input_data  make_runtime_inputs
lilac/atm_driver/: Makefile  README  atm_driver.F90  atm_driver_in  cheyenne.sub  ctsm.cfg  ctsm.mk  derecho.sub  drv_flds_in  drv_in  lilac_in  lnd_in  lnd_modelio.nml  mosart_in  namelist_lilac
lilac/bld_templates/: atm_driver_in  config_compilers_template.xml  config_machines_template.xml  ctsm-build_template.cmake  ctsm.cfg  ctsm_template.cfg  lilac_in  lilac_in_template  lnd_modelio_template.nml  mosart_in  user_nl_ctsm
lilac/ci/: build_and_test_lilac.sh  code_format.sh  emacs-fortran-formating-script.lisp  environment.yml  install_esmf.sh  install_pfunit.sh  install_python.sh
lilac/docs/: Makefile  api.rst  conf.py  developers.rst  index.rst  requirements.txt
lilac/lilac/: .gitignore  CMakeLists.txt  Makefile  atmos_cap.F90  atmos_comp.f90  batch.sub  core.f90  coupler_mod.f90  cpl_mod.F90  demo_driver.F90  demo_mod.F90  demo_utils.F90  esmf_utils.f90  lilac.f90  lilac_atmcap.F90  lilac_constants.F90  lilac_cpl.F90  lilac_history.F90  lilac_io.F90  lilac_mod.F90  lilac_utils.F90  lilac_utils.f90  lnd_cap.F90
lilac/lilac_joe/: esmf_utils.f90  lilac_utils.f90
lilac/scripts/: .cpl_mod.F90.swp  DummyAtmos.F90  LilacMod.F90  Makefile  atmos_cap.F90  cpl_mod.F90  demo_driver.F90  lilac_mod.F90  lilac_utils.F90  lilac_utils.f90  lnd_cap.F90
lilac/src/: .dir-locals.el  .gitignore  clmdrv.F90  ctsm_LilacAtm2LndFieldListType.F90  ctsm_LilacCouplingFieldIndices.F90  ctsm_LilacCouplingFields.F90  ctsm_LilacLnd2AtmFieldListType.F90  lilac-demo-driver.F90  lilac.F90  lilac_api_types.F90  lilac_atmaero.F90  lilac_atmcap.F90  lilac_constants.F90  lilac_cpl.F90  lilac_driver_pio_mod.F90  lilac_fields.F90  lilac_history.F90  lilac_init_pio_mod.F90  lilac_io.F90  lilac_methods.F90  lilac_mod.F90  lilac_time.F90  lilac_utils.F90  stub_comp_mct.F90
lilac/stub_rof/: rof_comp_esmf.F90
lilac/tests/: CMakeLists.txt
src/: CMakeLists.txt  README.unit_testing  README.unit_testing.md  SVN_EXTERNAL_DIRECTORIES
src/ED/: CMakeLists.txt
src/biogeochem/: AtmCarbonIsotopeStreamType.F90  C13SummaryMod.F90  C14BompbSpikeMod.F90  CASAMod.F90  CASAPhenologyMod.F90  CASASummaryMod.F90  CMakeLists.txt  CNAllocationMod.F90  CNAnnualUpdateMod.F90  CNBalanceCheckMod.F90  CNC13FluxMod.F90  CNC13StateUpdate1Mod.F90  CNC13StateUpdate2Mod.F90  CNC13StateUpdate3Mod.F90  CNC14DecayMod.F90  CNCIsoAtmTimeSeriesReadMod.F90  CNCIsoFluxMod.F90  CNCStateUpdate1Mod.F90  CNCStateUpdate2Mod.F90  CNCStateUpdate3Mod.F90  CNCarbonStateType.F90  CNDVDriverMod.F90  CNDVEcosystemDynIniMod.F90  CNDVEstablishmentMod.F90  CNDVLightMod.F90  CNDVMod.F90  CNDVType.F90  CNDecompMod.F90  CNDriverMod.F90  CNEcosystemDynMod.F90  CNFUNMod.F90  CNFireBaseMod.F90  CNFireEmissionsMod.F90  CNFireFactoryMod.F90  CNFireLi2014Mod.F90  CNFireLi2016Mod.F90  CNFireLi2021Mod.F90  CNFireLi2024Mod.F90  CNFireMethodMod.F90  CNFireMod.F90  (+107 more)
src/biogeophys/: #TotalWaterAndHeatMod.F90#  ActiveLayerMod.F90  AerosolMod.F90  BalanceCheckMod.F90  BandDiagonalMod.F90  BareGroundFluxesMod.F90  BiogeophysPreFluxCalcsMod.F90  BiogeophysRestMod.F90  Biogeophysics1Mod.F90  Biogeophysics2Mod.F90  BiogeophysicsLakeMod.F90  CMakeLists.txt  CanopyFluxesMod.F90  CanopyHydrologyMod.F90  CanopyStateType.F90  CanopyTemperatureMod.F90  DaylengthMod.F90  DiurnalOzoneType.F90  DividingWaterStateType.F90  DriverInitMod.F90  EnergyFluxType.F90  FracWetMod.F90  FrictionVelocityMod.F90  GlacierSurfaceMassBalanceMod.F90  GroundwaterMod.F90  HillslopeHydrologyBaseMod.F90  HillslopeHydrologyFactoryMod.F90  HillslopeHydrologyIndependentMod.F90  HillslopeHydrologyMod.F90  HillslopeHydrologySurfaceDataMod.F90  HillslopeHydrologyTroch02Mod.F90  HillslopeHydrologyUtilsMod.F90  HumanIndexMod.F90  Hydrology1Mod.F90  Hydrology2Mod.F90  HydrologyDrainageMod.F90  HydrologyLakeMod.F90  HydrologyNoDrainageMod.F90  InfiltrationExcessRunoffMod.F90  IrrigationMod.F90  (+133 more)
src/cpl/: clm_cpl_indices.F90  lnd_comp_esmf.F90  lnd_comp_mct.F90  lnd_import_export.F90
src/cpl_esmf/: lnd_comp_esmf.F90  lnd_comp_mct.F90
src/cpl_mct/: lnd_comp_mct.F90
src/cpl_share/: clm_cpl_indices.F90
src/csm_share/: ChangeLog  ChangeSum  README  README.scm
src/drv_test/: CMakeLists.txt
src/dyn_subgrid/: .gitignore  CMakeLists.txt  ctsm_DynColumnTemplate.F90  ctsm_DynFates.F90  ctsm_DynFileType.F90  ctsm_DynLandunitArea.F90  ctsm_DynPatchStateUpdater.F90  ctsm_DynPftFile.F90  ctsm_DynPriorWeights.F90  ctsm_DynTimeInfo.F90  do_genf90  dynColumnStateUpdaterMod.F90  dynColumnTemplateMod.F90  dynConsBiogeochemMod.F90  dynConsBiogeophysMod.F90  dynEDMod.F90  dynFATESLandUseChangeMod.F90  dynFileMod.F90  dynGrossUnrepMod.F90  dynHarvestMod.F90  dynInitColumnsMod.F90  dynLandunitAreaMod.F90  dynPatchStateUpdaterMod.F90  dynPriorWeightsMod.F90  dynSubgridControlMod.F90  dynSubgridDriverMod.F90  dynTimeInfoMod.F90  dynVarMod.F90  dynVarMod.F90.in  dynVarTimeInterpMod.F90  dynVarTimeInterpMod.F90.in  dynVarTimeUninterpMod.F90  dynVarTimeUninterpMod.F90.in  dyncropFileMod.F90  dynlakeFileMod.F90  dynpftFileMod.F90  dynurbanFileMod.F90
src/init_interp/: CMakeLists.txt  ctsm_InitInterp1dData.F90  ctsm_InitInterpBounds.F90  (+16 more)
(+5384 files in other folders)
