add_subdirectory(Daylength_test)
add_subdirectory(Irrigation_test)
add_subdirectory(HumanStress_test)
add_subdirectory(SnowHydrology_test)
add_subdirectory(Balance_test)
add_subdirectory(TotalWaterAndHeat_test)
add_subdirectory(Wateratm2lnd_test)
add_subdirectory(WaterTracerContainerType_test)
add_subdirectory(WaterTracerUtils_test)
add_subdirectory(WaterType_test)
