add_subdirectory(dynColumnTemplate_test)
add_subdirectory(dynColumnStateUpdater_test)
add_subdirectory(dynConsBiogeophys_test)
add_subdirectory(dynPatchStateUpdater_test)
add_subdirectory(dynInitColumns_test)
add_subdirectory(dynLandunitArea_test)
add_subdirectory(dynVar_test)
add_subdirectory(dynTimeInfo_test)
