add_subdirectory(subgridWeights_test)
add_subdirectory(accumul_test)
add_subdirectory(surfrdUtils_test)
add_subdirectory(atm2lnd_test)
add_subdirectory(clm_glclnd_test)
add_subdirectory(glcBehavior_test)
add_subdirectory(filter_test)
add_subdirectory(initVertical_test)
add_subdirectory(ncdio_utils_test)
add_subdirectory(topo_test)
